--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^9.0.6",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "font-awesome": "^4.7.0",
+    "material-design-iconic-font": "^2.2.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
